styles.css
nav {
    background-color: #800000;
    color: white;
    height: 50px;
    text-align: center;
}

nav a {
    width: 33%;
}

footer {
    background-color: #800000;
    color: white;
}

div {
    background-color: lightgray;
    border-width: 1;
    border-bottom: darkgray;
    border-top: darkgray;
    text-align: left;
}

h2 {
    background-color: #800000;
    color: white;
}

h3 {
    background-color: gray;
}

#indexDiv {
    text-align: center;
}

img {
    height: 250px;
    width: 250px;
}

